--- a/bth2/bth2.build_log.htm
+++ b/bth2/bth2.build_log.htm
@@ -27,23 +27,21 @@ Project File Date:  03/07/2025
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Rebuild target 'Target 1'
-compiling misc.c...
-compiling main.c...
 compiling GPIO.c...
-src/DHT11.c(83): warning: GCC does not allow variable declarations in for loop initializers before C99 [-Wgcc-compat]
-        for (int i = 0; i < 8; ++i) {
-             ^
-1 warning generated.
+compiling misc.c...
 compiling DHT11.c...
+compiling uart.c...
+compiling main.c...
 compiling Delay_Tim.c...
 compiling stm32f10x_gpio.c...
-compiling stm32f10x_rcc.c...
 assembling startup_stm32f10x_md.s...
 compiling system_stm32f10x.c...
+compiling stm32f10x_rcc.c...
+compiling stm32f10x_usart.c...
 compiling stm32f10x_tim.c...
 linking...
-Program Size: Code=4920 RO-data=268 RW-data=12 ZI-data=1660  
-".\bth2.axf" - 0 Error(s), 1 Warning(s).
+Program Size: Code=12848 RO-data=872 RW-data=12 ZI-data=1676  
+".\bth2.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -62,6 +60,7 @@ Package Vendor: Keil
    * Component: GPIO Version: 3.6.0
    * Component: RCC Version: 3.6.0
    * Component: TIM Version: 3.6.0
+   * Component: USART Version: 3.6.0
 
 <h2>Collection of Component include folders:</h2>
   ./RTE/Device/STM32F103C8
@@ -76,15 +75,15 @@ Package Vendor: Keil
 
    * Component: Keil::Device:Startup:1.0.0
       Source file:   Device/Source/system_stm32f10x.c
-      Source file:   Device/Source/ARM/STM32F1xx_OPT.s
       Source file:   Device/Source/ARM/startup_stm32f10x_md.s
+      Source file:   Device/Source/ARM/STM32F1xx_OPT.s
       Include file:  RTE_Driver/Config/RTE_Device.h
 
    * Component: Keil::Device:StdPeriph Drivers:Framework:3.6.0
-      Source file:   Device/StdPeriph_Driver/src/misc.c
-      Include file:  Device/StdPeriph_Driver/templates/stm32f10x_it.h
-      Include file:  Device/StdPeriph_Driver/inc/misc.h
       Source file:   Device/StdPeriph_Driver/templates/stm32f10x_conf.h
+      Include file:  Device/StdPeriph_Driver/inc/misc.h
+      Include file:  Device/StdPeriph_Driver/templates/stm32f10x_it.h
+      Source file:   Device/StdPeriph_Driver/src/misc.c
       Source file:   Device/StdPeriph_Driver/templates/stm32f10x_it.c
 
    * Component: Keil::Device:StdPeriph Drivers:GPIO:3.6.0
@@ -98,7 +97,11 @@ Package Vendor: Keil
    * Component: Keil::Device:StdPeriph Drivers:TIM:3.6.0
       Include file:  Device/StdPeriph_Driver/inc/stm32f10x_tim.h
       Source file:   Device/StdPeriph_Driver/src/stm32f10x_tim.c
-Build Time Elapsed:  00:00:01
+
+   * Component: Keil::Device:StdPeriph Drivers:USART:3.6.0
+      Source file:   Device/StdPeriph_Driver/src/stm32f10x_usart.c
+      Include file:  Device/StdPeriph_Driver/inc/stm32f10x_usart.h
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
